exports[`test should render correctly 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "stretch",
        "alignSelf": "stretch",
        "borderColor": "#eee",
        "borderRadius": 5,
        "borderWidth": 1,
        "flexDirection": "column",
        "minHeight": 200,
        "minWidth": 70,
        "overflow": "hidden",
      },
      Object {
        "height": undefined,
        "width": undefined,
      },
      undefined,
    ]
  }>
  <View
    style={
      Object {
        "alignSelf": "stretch",
        "flex": 1,
        "position": "relative",
      }
    }>
    <View
      style={
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }>
      <Image
        source={
          Object {
            "uri": "image.jpg",
          }
        }
        style={
          Array [
            Object {
              "flex": 1,
              "resizeMode": "cover",
            },
            undefined,
          ]
        } />
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "alignSelf": "stretch",
          "borderColor": "#efefef",
          "borderTopWidth": 1,
          "height": 40,
          "overflow": "hidden",
          "paddingHorizontal": 8,
        },
        undefined,
      ]
    }>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        Array [
          Object {
            "color": "#333",
            "fontSize": 14,
            "fontStyle": "normal",
            "fontWeight": "normal",
            "paddingVertical": 10,
            "textAlign": "left",
          },
          Object {
            "fontSize": 14,
            "lineHeight": 40,
            "paddingBottom": 0,
            "paddingTop": 0,
          },
        ]
      }>
      Footer content
    </Text>
  </View>
</View>
`;

exports[`test should render custom footerContent 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "stretch",
        "alignSelf": "stretch",
        "borderColor": "#eee",
        "borderRadius": 5,
        "borderWidth": 1,
        "flexDirection": "column",
        "minHeight": 200,
        "minWidth": 70,
        "overflow": "hidden",
      },
      Object {
        "height": undefined,
        "width": undefined,
      },
      undefined,
    ]
  }>
  <View
    style={
      Object {
        "alignSelf": "stretch",
        "flex": 1,
        "position": "relative",
      }
    } />
  <View
    style={
      Array [
        Object {
          "alignSelf": "stretch",
          "borderColor": "#efefef",
          "borderTopWidth": 1,
          "height": 40,
          "overflow": "hidden",
          "paddingHorizontal": 8,
        },
        undefined,
      ]
    }>
    <View
      style={
        Object {
          "position": "absolute",
        }
      }>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail">
        Custom footer content
      </Text>
    </View>
  </View>
</View>
`;
